--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="pageContainer">
   <div class="imageContainer"> 
-    <img src="images/cookies.jpg" alt="Tray of Chocolate Chip Cookies." /> 
+    <img src="images/r_cookies.jpg" alt="Tray of Chocolate Chip Cookies." /> 
   </div>
   <div class="textContainer">
     <h1>Cookies!</h1>
@@ -23,6 +23,8 @@
       <li>Chocolate Chip</li>
       <li>Peanut Butter</li>
       <li>Christmas</li>
+      <li>Sneakerdoodles</li>
+      <li>All!!!!!!!!!!!!!!</li>
     </ul>
   </div>
 </div>
